--- a/styles/Signin.module.css
+++ b/styles/Signin.module.css
@@ -1,24 +1,3 @@
-.container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.ctnd {
+  min-height: 100%;
 }
-
-.login {
-  
-  min-width: 200px;
-  max-width: 350px;
-  width: 50%;
-}
-.login > img {
-  max-width: 350px;
-  margin-top: 20;
-  
-}
-
-.formlogin {
-  margin-top: 20px;
-}
-
